
Updated pygments version requirement for tests.


*****  Fri Aug 26 09:43:16 CEST 2022  *****

Moved from travis to github actions for automated tests.

*****

Merge tags fix from Aaron (ads-update was not preserving tags).
Bumped bibmanager version to 1.4.5.


*****  Fri Sep 23 10:48:21 CEST 2022  *****

Updated bibtex entry in docs and README.


*****  Sun Oct 23 13:06:26 CEST 2022  *****

Updated bm.filter_field() to detect when entries with same isbn
have different dois (and allow that case).
Updated tests with new edge cases.

*****

Bumped bibmanager to version 1.4.6.
When merged, this resolves #108


*****  Thu Dec 1 13:52:32 CET 2022  *****

Update actions (setup python).

*****

Updated the runs-on version from ubuntu-latest to ubuntu-20.04
to prevent error with Python3.6 setting up (apparently is no
longer supported in ubuntu-22.04).

*****

Bumped bibmanager to version 1.4.7.


*****  Mon Jan 2 18:18:43 -03 2023  *****

Updated workflow to set appropriate os for each python version.
Fixed bug.

Updated copyright year in all files.

Updated nargs to 1 in search cli.

Removed outdated keybindings in browser.

Bumped bibmanager to version 1.4.7.

Fixed bug.


*****  Sun May 28 23:57:36 CEST 2023  *****

In remove_duplicates() check isbn unique books before removing dups
to prevent removing them when in fact they are not duplicates

*****

Modified bm.remove_duplicates() to return dictionary of replaced keys
that were duplicates of others.

*****

Added return_replacements argument in bm.read_file() function
to enable collecting dict of replaced keys.

*****

Cosmetics.

*****

Fixed am.display() bug when an entry does not have authors.
Tests is TBD.

*****

Added return_replacements argument in am.add_bibtex() function
to keep track of replaced keys.
Tests TBD.

*****

Added return_replacements argument in am.update() function
to keep track of replaced keys.
Tests TBD.


*****  Mon May 29 09:46:00 CEST 2023  *****

Implemented lm.get_bibfile() function.
